# cmake-learn

./: readme.md
add_lib/: CMakeLists.txt  HelloConfig.h.in  hello.c
add_lib/MathFunctions/: CMakeLists.txt  my_lib.c  my_lib.h
add_lib_easy/: CMakeLists.txt  hello.c
add_lib_easy/p/: CMakeLists.txt  p.h
hello/: CMakeLists.txt  hello.c
multiple_files/: CMakeLists.txt  hello.c  p.c
multiple_files_easy/: CMakeLists.txt
version_no_and_configured_header/: CMakeLists.txt  HelloConfig.h.in  hello.c  readme.md
